fixed header issue on mobile

--- a/src/shared/components/navigation/MainNavigation.css
+++ b/src/shared/components/navigation/MainNavigation.css
@@ -67,3 +67,12 @@
     display: none;
   }
 }
+
+@media (max-width: 500px) {
+  .main-header__title {
+    font-size: 1.7rem;
+  }
+  .side-drawer__header {
+    width: 80%;
+  }
+}
